--- a/ProjectMVVM/View/MedeWerkers.xaml
+++ b/ProjectMVVM/View/MedeWerkers.xaml
@@ -48,9 +48,9 @@
                       SelectedValue="{Binding SelectedContactperson.JobRole.Id}"
                   Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
                   />
-        <Label Content="Functie:" HorizontalAlignment="Left" Height="46.8" Margin="1129.6,182.2,-798.4,0" VerticalAlignment="Top" Width="296" FontSize="26.667"/>
-        <Label Content="Foto:" HorizontalAlignment="Left" Height="56" Margin="1130,435,0,0" VerticalAlignment="Top" Width="235" FontSize="26.667"/>
-        <Image x:Name="imgLogo_Copy" HorizontalAlignment="Left" Height="367" Margin="1130,521,0,0" VerticalAlignment="Top" Width="431"/>
+        <Label Content="Functie:" HorizontalAlignment="Left" Height="47" Margin="1130,187,0,0" VerticalAlignment="Top" Width="296" FontSize="26.667"/>
+        <Label Content="Foto:" HorizontalAlignment="Left" Height="56" Margin="1130,459,0,0" VerticalAlignment="Top" Width="235" FontSize="26.667"/>
+        <Image x:Name="imgLogo_Copy" HorizontalAlignment="Left" Height="306" Margin="1130,520,0,0" VerticalAlignment="Top" Width="306"/>
         <Label Content="Naam:" HorizontalAlignment="Left" Height="47" Margin="688,187,0,0" VerticalAlignment="Top" Width="296" FontSize="26.667"/>
         <Label Content="Telefoon NR:" HorizontalAlignment="Left" Height="50" Margin="688,521,0,0" VerticalAlignment="Top" Width="296" FontSize="26.667"/>
         <TextBox HorizontalAlignment="Left" Height="57" Margin="688,571,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="373" FontSize="26.667" 
@@ -70,10 +70,10 @@
         <Button Content="Verwijderen" HorizontalAlignment="Left" Height="56" Margin="481,834,0,0" VerticalAlignment="Top" Width="161" FontSize="26.667"
                 Command="{Binding DeleteContactpersonsCommand}"
                 />
-        <Button Content="Wijzig" HorizontalAlignment="Left" Height="56" Margin="1412,832,0,0" VerticalAlignment="Top" Width="161" FontSize="26.667"
+        <Button Content="Wijzig" HorizontalAlignment="Left" Height="56" Margin="1400,832,0,0" VerticalAlignment="Top" Width="161" FontSize="26.667"
                 Command="{Binding SaveContactpersonsCommand}"
                 />
-        <Button Content="Laad in" HorizontalAlignment="Left" Height="56" Margin="1400,435,0,0" VerticalAlignment="Top" Width="161" FontSize="26.667"
+        <Button Content="Laad in" HorizontalAlignment="Left" Height="56" Margin="1400,459,0,0" VerticalAlignment="Top" Width="161" FontSize="26.667"
                 Command="{Binding LogoCommand}"
                 />
     </Grid>
